@@ -2,6 +2,12 @@
 CHANGE LOG
 =========================================================================
 
+
+2207-20-07  Warren L. DeLano <warren@delsci.com>
+
+	* allow blank argument values in the command parser 
+
+	* added skip argument to python block command
 	
 2207-19-07  Warren L. DeLano <warren@delsci.com>
 
